# subreddit_processor

./: .gitignore  combine_df.py  eda.py  make_ticker_list.py  number_of_lines_code.py  plan.md  pyproject.toml  reddit.py  req.txt  requirements.txt  sentiment.py  summarization_history.py  t.py
misc/: add_to_all.py  eda.py  fix_comment_database.py  init_past.py  sent_to_database.py
misc/ner_tests/: roberta_test.py  spacy_ner.py
misc/sentiment_tests/: twitter_roberta.py  vader.py
src/: crypto_daily_summarizer.py  daily_summarizers.py  make_ticker_list.py  orm.py  praw_tools.py  reddit.py  sentiment.py  sentiment_models.py  text_processing.py
src/codebase/: text_utils.py
src/codebase/pipelines/: process.py
src/codebase/store/: csv_orm.py
src/data/: base.py  eda.py  orm.py  sql_alch.py  t.py
src/data/orm/: base.py  utils.py
src/database/: database.py
src/orm/: __init__.py  orm.py
src/phithon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/phithon/models/: models.py
src/process/: callbacks.py  process.py  utils.py
src/process/models/: models.py
src/sentiment/: callbacks.py  process.py
src/sentiment_models/: models.py  utils.py
src/subreddits/: crypto.py  wallstreetbets.py
src/summarize/: callbacks.py  crypto.py  eda_tools.py  init_history.py  summarize_tools.py  utils.py  wallstreetbets.py
tests/data/: test_eda.py
tests/process/: 2021-08-17_p5seel.csv  test_process.py
tests/sentiment/: test_process.py
tests/subreddits/: test_crypto.py
work/: apply_twitter_roberta_to_tables.py  crypto_eda.py  update_crypto_database.py
(+7 files in other folders)
